[project]
name = "ensure-import"
dynamic = ["version"]
description = "Auto install third part packages by pip into virtual environment when import error."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
homepage = "https://github.com/waketzheng/ensure_import"

[tool.poetry]
version = "0"
packages = [{include = "ensure_import"}]

[tool.poetry.group.dev.dependencies]
types-pytz = "*"
types-six = "*"
types-ujson = "*"
contextlib-chdir = {version="*", python="<3.11"}
fast-dev-cli = "^0.14.0"
bandit = "^1.8.3"
pytest-mock = "^3.14.0"

[tool.mypy]
pretty = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.ruff.lint.per-file-ignores]
"_test_*.py" = ["E401", "E402"]
"scripts/*.py" = ["UP009"]

[build-system]
requires = ["poetry-plugin-version"]
build-backend = "poetry_plugin_version.api"
