[project]
name = "ensure-import"
dynamic = ["version"]
description = "Auto install third part packages by pip into virtual environment when import error."
authors = [{name="Waket Zheng", email="waketzheng@gmail.com"}]
readme = "README.md"
license = {text="MIT"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
homepage = "https://github.com/waketzheng/ensure_import"

[tool.pdm]
version = {source="file", path="ensure_import/__init__.py"}

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.19.0",
    "types-pytz>=2025.2.0.20251108",
    "types-six>=1.17.0.20251009",
    "types-ujson>=5.10.0.20250822",
    "contextlib-chdir; python_version<'3.11'"
]
test = [
    "coverage>=7.10.7",
    "pytest-mock>=3.15.1",
]

[tool.mypy]
pretty = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.ruff.lint.per-file-ignores]
"_test_*.py" = ["E401", "E402"]
"scripts/*.py" = ["UP009"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
